Fixed predecessor identification for inherited fields